--- a/blogs/templates/post/post_detail.html
+++ b/blogs/templates/post/post_detail.html
@@ -28,12 +28,33 @@
     <div>
         {{ comment }}
         {% if request.user == comment.author %}
-            <form action="{% url 'delete_comment' comment.pk %}" method="post">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger">X</button>
-            </form>
+            <div class="d-flex gap-1">
+                <form action="{% url 'delete_comment' comment.pk %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">X</button>
+                </form>
+                <button class="btn btn-primary" onclick="toggleEditForm({{ comment.pk }})">Отредактировать</button>
+            </div>
+            <div id="edit-form-{{ comment.pk }}" class="edit-form" style="display: none;">
+                <form action="{% url 'comment_edit' comment.pk %}" method="post">
+                    {% csrf_token %}
+                    {{ comment_form.as_p }}
+                    <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+                </form>
+            </div>
         {% endif %}
     </div>
 {% endfor %}
+
+<script>
+    function toggleEditForm(commentId) {
+        var form = document.getElementById('edit-form-' + commentId);
+        if (form.style.display === 'none') {
+            form.style.display = 'block';
+        } else {
+            form.style.display = 'none';
+        }
+    }
+</script>
 
 {% endblock content %}
